--- a/template.html
+++ b/template.html
@@ -63,7 +63,7 @@
         <div class="container card-3" style="padding: 20px;">
             Mrs.M.Nishandhini,
 			<p>Our system has detected an orphan / abandoned child at <a href="https://www.google.com/maps/search/?api=1&query=__gps__">This location</a></p>
-			<img src="__img__""/>
+			<img src="data:image/gif;base64,__img__""/>
 			<p>Regards</p>
 			<p>Team OrphanCare</p>
         </div>
