--- a/template.html
+++ b/template.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -63,12 +62,12 @@
         <div class="container card-3" style="padding: 20px;">
             Mrs.M.Nishandhini,
 			<p>Our system has detected an orphan / abandoned child at <a href="https://www.google.com/maps/search/?api=1&query=__gps__">This location</a></p>
-			<img src="data:image/gif;base64,__img__""/>
+			<img src="data:image/png;base64,__img__"/>
 			<p>Regards</p>
 			<p>Team OrphanCare</p>
         </div>
     </div>
-    <footer style="height: 300px;width: 100%;display: block;background: url(footer.png) repeat-x;">
+    <footer style="height: 300px;width: 100%;display: block;background: url(https://raw.githubusercontent.com/samyak-jain/codespace-backend/master/footer.png?token=AVz_6QqZeVOgc_JBUd4BSISKgoRNab3Iks5at0pTwA%3D%3D) repeat-x;">
     </footer>
 </body>
 </html>
